<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="144dp" android:id="@+id/guideline2"/>
    <TextView
            android:text="@string/postUserId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:paddingRight="8dp"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/user_id_edit_text"
            app:layout_constraintBottom_toBottomOf="@+id/user_id_edit_text"/>
    <TextView
            android:text="@string/postTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAlignment="textEnd"
            android:paddingRight="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/title_edit_text"
            app:layout_constraintBottom_toBottomOf="@+id/title_edit_text"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="220dp" android:id="@+id/guideline3"/>
    <TextView
            android:text="@string/postBody"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAlignment="center"
            android:paddingRight="8dp"
            android:scrollbars="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="461dp" android:id="@+id/guideline"/>
    <Button
            android:text="@string/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_button"
            app:layout_constraintStart_toEndOf="@+id/add_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/delete_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <Button
            android:text="@string/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            app:layout_constraintStart_toEndOf="@+id/update_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <Button
            android:text="@string/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/update_button"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline"/>
    <Button
            android:text="@string/searchByPostId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/search_edit_text"
            app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/search_edit_text"
            android:hint="@string/searchByPostId"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"/>
    <TextView
            android:text="@string/postId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="textEnd"
            android:paddingRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/id_edit_text"
            app:layout_constraintBottom_toBottomOf="@+id/id_edit_text"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/id_edit_text"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/search_edit_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:hint="@string/postId"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_id_edit_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_edit_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:hint="@string/postUserId"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/title_edit_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/user_id_edit_text"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline3"
            android:hint="@string/postTitle"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/body_edit_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/update_button"
            android:hint="@string/postBody"/>
    <TextView
            android:text="@string/httpStatusMessage"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            android:id="@+id/status_text_view" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/update_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>